# StockPredictorWithSentiment

./: .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  Stock Predictor with Sentiment.ipynb  Stock Predictor with Sentiment.py  app.py  pyproject.toml  requirements.txt  stock_forecast_with_sentiment.py  update_readme_date.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: CHANGELOG.md  PHASE5_DECISION.md  RESULTS.md  RESULTS_TEMPLATE.md
stockpredictor/: __init__.py  cli.py  config.py  costs.py  data.py  evaluation.py  forecast.py  models.py  news.py  pipeline.py  plotting.py  portfolio.py  sanitize.py  sentiment.py  signals.py  sizing.py  store.py  strategy.py
tests/: conftest.py  test_cli.py  test_costs.py  test_data.py  test_evaluation.py  test_forecast.py  test_models.py  test_news.py  test_pipeline.py  test_portfolio.py  test_sanitize.py  test_sentiment.py  test_signals.py  test_simulation.py  test_sizing.py  test_store.py  test_strategy.py  test_update_readme.py
