[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "stockpredictor"
version = "0.2.0"
description = "Historical price forecasting with prediction intervals and news-sentiment context."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Marshall Cahill", email = "contactme@marshallcahill.com" }]
keywords = ["stocks", "forecasting", "sentiment", "holt-winters", "newsapi"]

dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "statsmodels>=0.14.6",
    "matplotlib>=3.7",
    "yfinance>=0.2.40",
    "newsapi-python>=0.2.7",
    "vaderSentiment>=3.3.2",
]

[project.optional-dependencies]
viz = ["plotly>=6.8.0"]
app = ["streamlit>=1.50.0", "plotly>=6.8.0"]
ml = ["scikit-learn>=1.6.1"]
finbert = ["transformers>=4.57.6", "torch>=2.8.0"]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
    "mypy>=1.19.1",
    "pip-audit>=2.9.0",
]

[project.scripts]
stock-forecast = "stockpredictor.cli:main"

[project.urls]
Homepage = "https://github.com/RealMaxPower/StockPredictorWithSentiment"

[tool.setuptools]
packages = ["stockpredictor"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, B bugbear, UP pyupgrade, S flake8-bandit
select = ["E", "W", "F", "I", "B", "UP", "S"]
ignore = ["E501"]  # line length handled by the formatter

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use assert; S101 is expected there, not a security smell.
"tests/**" = ["S101"]

[tool.mypy]
# Target 3.12: numpy's stubs use PEP 695 `type` statements that mypy only
# accepts when targeting >=3.12, so this sits above our 3.10 floor. Runtime
# compatibility across 3.10-3.12 is verified by the pytest matrix in CI.
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["stockpredictor"]
